# VECTOR-LOAD

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.backend  Dockerfile.backend.prod  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: main.py
backend/app/: __init__.py
backend/app/api/: routes.py
backend/app/core/: simulator.py
engine/: CMakeLists.txt  Dockerfile
engine/bindings/: engine_bindings.cpp
engine/include/: engine_types.h
engine/service/: main.py
engine/src/: ga_packer.cpp
frontend/: .env.example  Dockerfile  Dockerfile.prod  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: TruckViewer.jsx
frontend/src/services/: api.js
tests/integration_python/: test_engine_optimize.py  test_engine_physics.py  test_health.py
